@@ -336,6 +336,9 @@ Extension modules
 Library
 -------
 
+- Bug #957381: distutils bdist_rpm no longer fails on recent RPM versions
+  that generate a *-debuginfo.rpm.
+
 - os.path.devnull has been added for all supported platforms.
 
 - Fixed #877165: distutils now picks the right C++ compiler command
@@ -422,7 +425,7 @@ Library
 - bisect.py and heapq.py now have underlying C implementations
   for better performance.
 
-- heapq.py has two new functions, nsmallest() and nlargest().                                                                  
+- heapq.py has two new functions, nsmallest() and nlargest().
 
 - traceback.format_exc has been added (similar to print_exc but it returns
   a string).
